fix dark mode toggle from not starting from the correct position when page is scrolled down

--- a/stylesheets/components/Animations/GrowingCircleAnimation.module.sass
+++ b/stylesheets/components/Animations/GrowingCircleAnimation.module.sass
@@ -8,7 +8,7 @@
      Source: https://stackoverflow.com/questions/33606565 */
   width: calc(100vw - (100vw - 100%))
   height: 100vh
-  position: absolute
+  position: fixed
   z-index: -1
   background: $midnight-black
   /* top: 0 and left: 0 are required for MediaCarousel to be able to play video in MacOS Safari 15.
